# protopub

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
.github/workflows/: master.yaml
ci/: status.sh
cmd/protopub/: BUILD.bazel  main.go
docs/: oci-metadata.md  tutorial.md
examples/routeguide/: route_guide.proto
pkg/protopub/: BUILD.bazel  build.go  image.go  oci.go  pull.go  push.go  store.go
pkg/protopubcli/: BUILD.bazel  build.go  inspect.go  login.go  protopub.go  pull.go  push.go  resolver.go
schema/: BUILD.bazel  config.go  version.go
schema/v1/: BUILD.bazel  config.go
