load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/freshapi/protopub/cmd/protopub",
    visibility = ["//visibility:private"],
    deps = ["//pkg/protopubcli:go_default_library"],
)

go_binary(
    name = "protopub",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "version": "{BUILD_VERSION}",
    },
)
