load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "image.go",
        "oci.go",
        "pull.go",
        "push.go",
        "store.go",
    ],
    importpath = "github.com/freshapi/protopub/pkg/protopub",
    visibility = ["//visibility:public"],
    deps = [
        "//schema:go_default_library",
        "//schema/v1:go_default_library",
        "@com_github_containerd_containerd//images:go_default_library",
        "@com_github_containerd_containerd//remotes:go_default_library",
        "@com_github_deislabs_oras//pkg/content:go_default_library",
        "@com_github_deislabs_oras//pkg/oras:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
    ],
)
