load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "inspect.go",
        "login.go",
        "protopub.go",
        "pull.go",
        "push.go",
        "resolver.go",
    ],
    importpath = "github.com/freshapi/protopub/pkg/protopubcli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/protopub:go_default_library",
        "@com_github_containerd_containerd//remotes:go_default_library",
        "@com_github_containerd_containerd//remotes/docker:go_default_library",
        "@com_github_deislabs_oras//pkg/auth/docker:go_default_library",
        "@com_github_docker_docker//pkg/term:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)
